Inizio visualizzazione menu

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           <nav class="main_menu">
             <ul class="menu_list">
               <li>
-                <a href="#">Denaro</a>
-                <div class="m_tendina_1 d_none">
+                <a class="open_menu" href="#">Denaro</a>
+                <div class="m_tendina_1">
                   <ul class="tendina_list">
                     <li>
                       <a href="#">Invia denaro all'estero</a>
@@ -53,8 +53,8 @@
                 </div>
               </li>
               <li>
-                <a href="#">Investimenti e Risparmi</a>
-                <div class="m_tendina_2 d_none">
+                <a class="open_menu" href="#">Investimenti e Risparmi</a>
+                <div class="m_tendina_2">
                   <ul class="tendina_list">
                     <li>
                       <a href="#">Effettua compravendite di titoli azionari</a>
@@ -72,8 +72,8 @@
                 </div>
               </li>
               <li>
-                <a href="#">Controllo</a>
-                <div class="m_tendina_3 d_none">
+                <a class="open_menu" href="#">Controllo</a>
+                <div class="m_tendina_3">
                   <ul class="tendina_list">
                     <li>
                       <a href="#">Imposta i budget</a>
@@ -85,8 +85,8 @@
                 </div>
               </li>
               <li>
-                <a href="#">Altro</a>
-                <div class="m_tendina_4 d_none">
+                <a class="open_menu" href="#">Altro</a>
+                <div class="m_tendina_4">
                   <ul class="tendina_list">
                     <li>
                       <a href="#">Assicura te stesso all'estero</a>
@@ -102,8 +102,8 @@
                 </div>
               </li>
               <li>
-                <a href="#">Abbonamenti</a>
-                <div class="m_tendina_5 d_none">
+                <a class="open_menu" href="#">Abbonamenti</a>
+                <div class="m_tendina_5">
                   <ul class="tendina_list">
                     <li>
                       <a href="#">Standard</a>
@@ -124,8 +124,8 @@
                 </div>
               </li>
               <li>
-                <a class="language" href="#">IT</a>
-                <div class="m_tendina_6 d_none">
+                <a class="language open_menu" href="#">IT</a>
+                <div class="m_tendina_6">
                   <ul class="tendina_list">
                     <li>
                       <a href="#">EN</a>
