--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
           <nav class="main_menu">
             <ul class="menu_list">
-              <li>
-                <a class="open_menu" href="#">Denaro</a>
+              <li class="open_menu">
+                <a href="#">Denaro</a>
                 <div class="m_tendina_1">
                   <ul class="tendina_list">
                     <li>
@@ -52,8 +52,8 @@
                   </ul>
                 </div>
               </li>
-              <li>
-                <a class="open_menu" href="#">Investimenti e Risparmi</a>
+              <li class="open_menu">
+                <a href="#">Investimenti e Risparmi</a>
                 <div class="m_tendina_2">
                   <ul class="tendina_list">
                     <li>
@@ -71,8 +71,8 @@
                   </ul>
                 </div>
               </li>
-              <li>
-                <a class="open_menu" href="#">Controllo</a>
+              <li class="open_menu">
+                <a href="#">Controllo</a>
                 <div class="m_tendina_3">
                   <ul class="tendina_list">
                     <li>
@@ -84,8 +84,8 @@
                   </ul>
                 </div>
               </li>
-              <li>
-                <a class="open_menu" href="#">Altro</a>
+              <li class="open_menu">
+                <a href="#">Altro</a>
                 <div class="m_tendina_4">
                   <ul class="tendina_list">
                     <li>
@@ -101,8 +101,8 @@
                   </ul>
                 </div>
               </li>
-              <li>
-                <a class="open_menu" href="#">Abbonamenti</a>
+              <li class="open_menu">
+                <a href="#">Abbonamenti</a>
                 <div class="m_tendina_5">
                   <ul class="tendina_list">
                     <li>
@@ -123,8 +123,8 @@
                   </ul>
                 </div>
               </li>
-              <li>
-                <a class="language open_menu" href="#">IT</a>
+              <li class="open_menu">
+                <a href="#">IT</a>
                 <div class="m_tendina_6">
                   <ul class="tendina_list">
                     <li>
